Icon gap fix

--- a/src/app/shared-module/features/features.component.scss
+++ b/src/app/shared-module/features/features.component.scss
@@ -1,7 +1,7 @@
 .card-block {
   display: flex;
   flex-wrap: wrap;
-  gap: 3%;
+  gap: 1%;
   justify-content: center;
 }
 
